--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "18-ng-app": {
+    "interview-task": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/18-ng-app",
+            "outputPath": "dist/interview-task",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "18-ng-app:build:production"
+              "buildTarget": "interview-task:build:production"
             },
             "development": {
-              "buildTarget": "18-ng-app:build:development"
+              "buildTarget": "interview-task:build:development"
             }
           },
           "defaultConfiguration": "development"
